# node-ros-2026

./: .dockerignore  .gitignore  Containerfile  README.md  TODOS.md  compose.yaml  entrypoint.sh  pyproject.toml  pyrightconfig.json
.devcontainer/: Containerfile.dev  devcontainer.json
.github/workflows/: build.yaml
config/: ekf.yaml  nav2_params.yaml
control/: Containerfile  actuator_driver.py  nav_to_pid.py  pid_controller.py  pyproject.toml
foxglove-mission-panel/: .gitignore  CHANGELOG.md  README.md  config.ts  package-lock.json  package.json  tsconfig.json
foxglove-mission-panel/src/: MissionPanel.tsx  index.ts
foxglove-mission-panel/src/ros/: messages.ts
foxglove-mission-panel/src/types/: css.d.ts
launch/: njord.launch.py
localization/: Containerfile  entrypoint.sh
localization/config/: navsat.yaml
localization/launch/: localization.launch.py
mission/: Containerfile  mission_manager.py  pyproject.toml
navigation/: Containerfile
navigation/config/: nav2_params.yaml
navigation/launch/: navigation.launch.py
perception/: Containerfile  fusion_node.py  launch_all.py  pyproject.toml
perception/perception/: fusion_node.py  lidar_obstacle_node.py
reports/: generate_nav2_gps_report.py  generate_nav2_gps_report_manual.py
ros2/: Containerfile
scripts/: build-foxglove-panel.sh  deploy-pi.sh  init-pi.sh  init.sh
sensors/: Containerfile  camera_driver.py  imu_gps_driver.py  pyproject.toml
sensors/sensors/: camera_driver.py  launch_all.py
src/asket_description/: CMakeLists.txt
src/asket_description/urdf/: asket.urdf.xacro
src/boat_bt/: CMakeLists.txt  package.xml
src/boat_bt/bt_xml/: simple_boat.xml
src/boat_bt/src/: boat_bt_node.cpp
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: ekf.yaml  gz_bridge.yaml  nav2_params.yaml  navsat.yaml
src/bringup/launch/: njord.launch.py
src/control/: package.xml  setup.py
src/control/config/: pid_gains.yaml
src/control/control/: actuator_driver.py  launch_all.py  pico_bridge.py  pid_controller.py
src/description/: CMakeLists.txt  package.xml
src/description/meshes/: L_prop_blade_visual.mtl  L_prop_body_collision.stl  hull_collision.stl  hull_visual.mtl  r_prop_blade_collision.stl  r_prop_body_collision.stl
src/description/urdf/: asket.urdf.xacro  asket.xacro
src/description/worlds/: basicWorld.sdf
src/mission/: package.xml  setup.py
src/mission/mission/: mission_manager.py  send_waypoints.py
src/njord_msgs/: CMakeLists.txt  package.xml
src/njord_msgs/srv/: StartMission.srv
src/perception/: package.xml  setup.py
src/perception/perception/: buoy_tracker_node.py  fusion_node.py  lidar_obstacle_node.py
src/sensors/: package.xml  setup.py
src/sensors/sensors/: camera_driver.py  imu_gps_driver.py  lidar_driver.py
src/sim/: package.xml  setup.py
src/sim/config/: ekf_sim.yaml  nav2_sim_params.yaml  rviz2_sim.rviz
src/sim/launch/: sim_nav2.launch.py
src/sim/sim/: simulator.py
src/vision/: package.xml  setup.py
src/vision/vision/: node.py
src/webbridge/: package.xml  setup.cfg  setup.py
src/webbridge/webbridge/: webbridge_node.py
vision_detector/: Containerfile  node.py  pyproject.toml
vision_detector/vision_detector/: node.py
webui/: index.html  main.py
