[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mission"
version = "0.1.0"
description = "Mission manager for Njord 2026"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mission-manager = "mission.mission_manager:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mission*"]
