[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perception"
version = "0.1.0"
description = "Obstacle detection and fusion for Njord 2026"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.scripts]
lidar-obstacle-node = "perception.lidar_obstacle_node:main"
fusion-node = "perception.fusion_node:main"
perception-launch-all = "perception.launch_all:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["perception*"]
