[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sensors"
version = "0.1.0"
description = "Sensor drivers for Njord 2026"
requires-python = ">=3.10"
dependencies = ["opencv-python-headless"]

[project.scripts]
camera-driver = "sensors.camera_driver:main"
lidar-driver = "sensors.lidar_driver:main"
imu-gps-driver = "sensors.imu_gps_driver:main"
sensors-launch-all = "sensors.launch_all:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sensors*"]
