[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vision_detector"
version = "0.1.0"
description = "YOLO26n-seg ROS2 detection node for Njord 2026"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.4.24",
    "opencv-python-headless",
]

[project.scripts]
vision-detector-node = "vision_detector.node:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vision_detector*"]
