<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>Launch and config files for the Njord 2026 USV</description>
  <maintainer email="njord@stud.ntnu.no">Njord</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>sensors</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>control</exec_depend>
  <exec_depend>mission</exec_depend>
  <exec_depend>vision</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
