<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission</name>
  <version>0.1.0</version>
  <description>Mission management for the Njord 2026 USV</description>
  <maintainer email="njord@stud.ntnu.no">Njord</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>njord_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
